<resources>
    <string name="app_name">PracticaCalificada2</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login_dni">Ingrese su DNI</string>
    <string name="login_dni_hint">ejemplo:12345678</string>
    <string name="login_psw">Ingrese su clave</string>
    <string name="login_btn">Ingresar</string>
    <string name="login_new">Crear Cuenta</string>
    <string name="accedido">Bienvenido</string>
    <string name="register">Ingrese su DNI</string>
    <string name="register_name">Ingrese su nombre completo</string>
    <string name="register_psw">Ingrese su clave</string>
    <string name="register_psw_v">Ingrese nuevamente su clave</string>
    <string name="register_register">Crear Cuenta</string>
    <string name="reg_hint">¿Tienes una cuenta?</string>
    <string name="register_acceder">Ingresar</string>
</resources>